Minor improvements in ReflectionUtil.